--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.16MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-593.6KB/s(Youtube:不良林), server: 38.68.135.19, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-6.18MB/s(Youtube:不良林), server: 183.232.141.117, port: 559, type: ssr, cipher: chacha20-ietf, password: mblank1port, protocol: auth_aes128_md5, obfs: plain, protocol-param: 30999:LLLLiikk988iu, obfs-param: dC5tZS92cG5oYXQ}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-946.8KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇦 (已存活1天)加拿大-1.05MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-398.7KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-273.5KB/s(Youtube:不良林), server: 183.232.141.117, port: 559, type: ssr, cipher: chacha20-ietf, password: mblank1port, protocol: auth_aes128_md5, obfs: plain, protocol-param: 30999:LLLLiikk988iu, obfs-param: dC5tZS92cG5oYXQ}
   - {name: 🇸🇬 新加坡-1.07MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
+  - {name: 🇨🇳 中国-946.8KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇭🇰 香港-11.34MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
   - {name: 🇺🇸 美国-652.0KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇺🇸 美国-928.0KB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-390.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.81, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-652.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-928.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-652.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-928.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-652.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-928.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-652.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-928.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-652.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-928.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-652.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-928.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-946.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-652.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-928.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
