--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,67 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-758.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇫🇷 法国-906.1KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇨🇦 加拿大-328.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.00MB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇦 加拿大-435.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 香港-11.99MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
+  - {name: 🇺🇸 美国-501.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-586.1KB/s(Youtube:不良林), server: 85.208.108.18, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇦 加拿大-759.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-310.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-403.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-349.1KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇨🇳 台湾-5.10MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-758.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-906.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-328.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-501.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-586.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-759.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-310.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-758.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-906.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-328.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-501.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-586.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-759.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-310.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-758.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-906.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-328.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-501.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-586.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-759.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-310.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-11.99MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -73,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-758.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-906.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-328.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-501.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-586.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-759.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-310.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-758.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-906.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-328.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-501.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-586.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-759.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-310.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-758.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-906.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-328.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-501.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-586.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-759.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-310.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-758.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-906.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-328.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-501.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-586.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-759.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-310.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
